--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 <button class="filter-btn" data-filter="all">Clear Filters</button>
 
 
-<div class="gallery-item" data-tags="nature, all">
+<div class="gallery-item" data-tags="nature">
     Paper 1
 </div>
-<div class="gallery-item" data-tags="city, all">
+<div class="gallery-item" data-tags="city">
     Paper 2
 </div>
 
