--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
 <!-- Gallery Items -->
 <div class="gallery">
-    <div class="gallery-item" data-category="nature"> <!-- Nature Item --> </div>
-    <div class="gallery-item" data-category="city"> <!-- City Item --> </div>
+    <div class="gallery-item" data-category="nature"> Nature </div>
+    <div class="gallery-item" data-category="city"> City </div>
     <!-- More items -->
 </div>
 
